[gd_scene load_steps=13 format=3 uid="uid://bl34rbxv4sxpc"]

[ext_resource type="Script" path="res://Scripts/StatisticsComponent.gd" id="1_3ldj0"]
[ext_resource type="Texture2D" uid="uid://cuvxstqym24q6" path="res://Assets/enemy_worm.png" id="2_ml7su"]
[ext_resource type="Script" path="res://Scripts/AnimationController.gd" id="3_01am0"]
[ext_resource type="Script" path="res://DetectPlayer.gd" id="3_oxnt2"]
[ext_resource type="Script" path="res://Scripts/HitComponent.gd" id="4_27rfc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vljgb"]
size = Vector2(7, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_6deel"]
radius = 84.0536

[sub_resource type="Animation" id="Animation_nnx4l"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, 0.25), Vector2(0.5, 0.25), Vector2(1.96154, -0.5), Vector2(0.5, -0.363636), Vector2(1, -0.227273), Vector2(0.571429, -0.0909093), Vector2(1.75, -0.75), Vector2(0.25, -0.0833335)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HitComponent/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7, 19), Vector2(6, 19), Vector2(7.07692, 19.5), Vector2(6, 19.4091), Vector2(7, 19.3182), Vector2(7, 19.2273), Vector2(7.5, 19.1364), Vector2(7.16667, 19.0455)]
}

[sub_resource type="Animation" id="Animation_i6tp7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HitComponent/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 5.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitComponent/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 19)]
}

[sub_resource type="Animation" id="Animation_gh76t"]
resource_name = "Moving"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 10, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, 10.5), Vector2(-0.5, 12), Vector2(0, 12.3), Vector2(-0.5, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HitComponent/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(19, 7), Vector2(19, 7), Vector2(21, 6), Vector2(24, 4.6), Vector2(21, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25dki"]
_data = {
"Idle": SubResource("Animation_nnx4l"),
"Moving": SubResource("Animation_gh76t"),
"RESET": SubResource("Animation_i6tp7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2csaw"]
size = Vector2(7, 19)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 97

[node name="BlockCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 11.5)
shape = SubResource("RectangleShape2D_vljgb")

[node name="DetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 33
script = ExtResource("3_oxnt2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_6deel")

[node name="AnimationController" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ml7su")
hframes = 8
vframes = 2
script = ExtResource("3_01am0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationController"]
libraries = {
"": SubResource("AnimationLibrary_25dki")
}

[node name="StatisticsComponent" type="Node2D" parent="."]
script = ExtResource("1_3ldj0")
max_health = 50
health = 50

[node name="HitComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "sprite")]
position = Vector2(-0.5, 5.75)
collision_layer = 64
collision_mask = 33
script = ExtResource("4_27rfc")
health_component = NodePath("../StatisticsComponent")
sprite = NodePath("../AnimationController")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(1.5, 5.75)
shape = SubResource("RectangleShape2D_2csaw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="DetectArea" to="DetectArea" method="_on_area_entered"]
[connection signal="body_entered" from="DetectArea" to="DetectArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectArea" to="DetectArea" method="_on_body_exited"]
